--- a/src/App.css
+++ b/src/App.css
@@ -65,7 +65,10 @@
 
 .select-map-style .ant-select-selector {
     padding: 0 !important;
+}
 
+.ant-input-group-addon .ant-btn-primary {
+    background-color: var(--color-purple);
 }
 
 /* MAPBOXGL - fix */
